--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
-  text-align: center;
+.container {
+  margin: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dropdown-title {
+  margin-bottom: 0.2rem;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dropdown-container {
+  width: 12rem;
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dropdown-btn {
+  display: flex;
+  width: 100%;
+  padding: 0.3rem;
+  border: 0.15rem solid #d4d4d4;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: white;
+  padding: 0.5rem 1rem;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.options-container {
+  position: absolute;
+  width: 98%;
   display: flex;
   flex-direction: column;
+  background-color: white;
+  border: 0.15rem solid #d4d4d4;
+  border-radius: 5px;
+}
+
+.options-container-hidden {
+  display: none;
+}
+
+.options {
+  background: none;
+  border: none;
+  text-align: left;
+  padding: 0.5rem 1rem;
+  border-bottom: 0.15rem solid #d4d4d4;
+  cursor: pointer;
+}
+
+.options:disabled {
+  background-color: #e6e6e6;
+  color: #d4d4d4;
+  cursor: default;
+}
+ /*
+.options-container {
+  width: 10rem;
+  padding: 0.3rem;
+  border: 0.15rem solid #d4d4d4;
+  border-radius: 5px;
+}
+
+.options-container option:disabled {
+  background-color: #e6e6e6;
+  color: gray;
+}
+*/
+.sum-text {
+  font-size: 2rem;
+  margin: 0 0 3rem 0;
+}
+
+.numbers-container {
+  display: flex;
+}
+
+.selected-num {
+  display: flex;
+  height: 1.5rem;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 3rem;
+  border-radius: 10px;
+  background-color: gray;
+  margin-right: 0.5rem;
   color: white;
+  justify-content: space-evenly;
+  font-size: 0.8rem;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.desc-container {
+  outline: 0.15rem dashed #d4d4d4;
+  padding: 2rem 0.5rem;
+  width: 25rem;
+  text-align: center;
+  background-color: #e6e6e6;
 }
